api con naranjito

--- a/flask/templates/home.html
+++ b/flask/templates/home.html
@@ -1,5 +1,5 @@
 <html>
-    <body bgcolor=#d4a3ae>
+    <body bgcolor=#ed8d18>
 
         <center>
 
@@ -10,8 +10,6 @@
             </b>
             <input type="submit" , value='Recomendar!' >
         </form>
-
-        <img src='static\flower1.jpg' alt="flower">
         
     </center>
 
